[gd_scene load_steps=19 format=3 uid="uid://cng13403pftyj"]

[ext_resource type="Script" path="res://scripts/globals/battle.gd" id="1_p3x22"]
[ext_resource type="FontFile" uid="uid://csfxe4gpjf0nh" path="res://fonts/superstar_memesbruh03.ttf" id="1_t8wh6"]
[ext_resource type="Texture2D" uid="uid://c1m4xdx2rdl37" path="res://assets/UI/send.png" id="3_d4cqq"]
[ext_resource type="Texture2D" uid="uid://dxm750fthk86h" path="res://assets/UI/RedHeart.png" id="4_4w6gv"]
[ext_resource type="Shader" path="res://shaders/bounce.gdshader" id="4_iv7re"]
[ext_resource type="Texture2D" uid="uid://b3g8xxswrq1em" path="res://assets/UI/BlackHeart.png" id="5_4rf5i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k3yjb"]
shader = ExtResource("4_iv7re")
shader_parameter/do_abs = true
shader_parameter/do_quantize = false
shader_parameter/quantize_to = 1.0
shader_parameter/sine_amplitude = Vector2(1, 2)
shader_parameter/sine_speed = Vector2(1, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_atst5"]
atlas = ExtResource("4_4w6gv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixgy1"]
atlas = ExtResource("5_4rf5i")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jkr6q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_atst5")
}],
"loop": true,
"name": &"alive",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixgy1")
}],
"loop": true,
"name": &"died",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n4flo"]
bg_color = Color(0.525101, 0.525101, 0.525101, 1)

[sub_resource type="Theme" id="Theme_kvfhf"]
RichTextLabel/styles/normal = SubResource("StyleBoxFlat_n4flo")

[sub_resource type="Animation" id="Animation_j662k"]
length = 0.001

[sub_resource type="Animation" id="Animation_i5hjt"]
resource_name = "end"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OpponentContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -200)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OpponentContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Chatbox:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Chatbox:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 300)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AnswerBox:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Button:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Button:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(992, 766), Vector2(1200, 766)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("AnswerBox:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(318, 503), Vector2(318, 1003)]
}

[sub_resource type="Animation" id="Animation_1u6y5"]
resource_name = "end_text_box"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Chatbox:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Chatbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 300)]
}

[sub_resource type="Animation" id="Animation_6fpsj"]
resource_name = "start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 300), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OpponentContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -200), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OpponentContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Chatbox:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Chatbox:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 300), Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AnswerBox:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(318, 1009), Vector2(318, 509)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AnswerBox:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Button:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Button:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(992, 766), Vector2(992, 466)]
}

[sub_resource type="Animation" id="Animation_yun5t"]
resource_name = "start_text_box"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Chatbox:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Chatbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 300), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnswerBox:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Button:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cj4cs"]
_data = {
"RESET": SubResource("Animation_j662k"),
"end": SubResource("Animation_i5hjt"),
"end_text_box": SubResource("Animation_1u6y5"),
"start": SubResource("Animation_6fpsj"),
"start_text_box": SubResource("Animation_yun5t")
}

[node name="Battle" type="CanvasLayer"]
script = ExtResource("1_p3x22")

[node name="OpponentContainer" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OpponentHearts2" type="AnimatedSprite2D" parent="OpponentContainer"]
z_index = 1
material = SubResource("ShaderMaterial_k3yjb")
position = Vector2(960, 66)
sprite_frames = SubResource("SpriteFrames_jkr6q")
animation = &"alive"

[node name="OpponentHealth" type="Label" parent="OpponentContainer"]
z_index = 1
layout_mode = 0
offset_left = 1019.0
offset_top = 37.0
offset_right = 1059.0
offset_bottom = 97.0
theme_override_fonts/font = ExtResource("1_t8wh6")
theme_override_font_sizes/font_size = 60
text = "x3"

[node name="Background2" type="ColorRect" parent="OpponentContainer"]
layout_mode = 0
offset_left = 800.0
offset_top = 6.0
offset_right = 1147.0
offset_bottom = 106.0
theme = SubResource("Theme_kvfhf")
color = Color(0.180005, 0.180005, 0.180005, 1)

[node name="SupportText" type="Label" parent="OpponentContainer"]
z_index = 1
layout_mode = 0
offset_left = 815.0
offset_top = 5.0
offset_right = 1036.0
offset_bottom = 36.0
theme_override_fonts/font = ExtResource("1_t8wh6")
theme_override_font_sizes/font_size = 30
text = "Opponent Health:"

[node name="PlayerContainer" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 39.9998

[node name="QuestionBox" type="RichTextLabel" parent="PlayerContainer"]
layout_mode = 0
offset_left = 291.0
offset_top = 452.0
offset_right = 970.0
offset_bottom = 519.0
theme_override_fonts/normal_font = ExtResource("1_t8wh6")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
autowrap_mode = 1

[node name="SupportTexts" type="Control" parent="PlayerContainer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SupportText1" type="Label" parent="PlayerContainer/SupportTexts"]
layout_mode = 0
offset_left = 320.0
offset_top = 452.0
offset_right = 442.0
offset_bottom = 483.0
theme_override_fonts/font = ExtResource("1_t8wh6")
theme_override_font_sizes/font_size = 30
text = "Question:"

[node name="SupportText2" type="Label" parent="PlayerContainer/SupportTexts"]
layout_mode = 0
offset_left = 975.0
offset_top = 579.0
offset_right = 1119.0
offset_bottom = 630.0
theme_override_fonts/font = ExtResource("1_t8wh6")
theme_override_font_sizes/font_size = 50
text = "SUBMIT"

[node name="SupportText3" type="Label" parent="PlayerContainer/SupportTexts"]
layout_mode = 0
offset_left = 77.0
offset_top = 452.0
offset_right = 224.0
offset_bottom = 503.0
theme_override_fonts/font = ExtResource("1_t8wh6")
theme_override_font_sizes/font_size = 50
text = "Health"

[node name="PlayerHeart" type="AnimatedSprite2D" parent="PlayerContainer"]
material = SubResource("ShaderMaterial_k3yjb")
position = Vector2(125, 563)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_jkr6q")
animation = &"alive"

[node name="Health" type="Label" parent="PlayerContainer"]
z_index = 1
layout_mode = 0
offset_left = 159.0
offset_top = 563.0
offset_right = 239.0
offset_bottom = 643.0
theme_override_fonts/font = ExtResource("1_t8wh6")
theme_override_font_sizes/font_size = 70
text = "x3"

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cj4cs")
}

[node name="Chatbox" type="Control" parent="."]
visible = false
z_index = -1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 39.9998

[node name="ChatBox" type="RichTextLabel" parent="Chatbox"]
layout_mode = 0
offset_left = 77.0
offset_top = 477.0
offset_right = 1044.0
offset_bottom = 584.0
theme_override_fonts/normal_font = ExtResource("1_t8wh6")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true

[node name="Background" type="ColorRect" parent="Chatbox"]
z_index = -1
layout_mode = 0
offset_left = 1129.0
offset_top = 441.0
offset_right = 1576.0
offset_bottom = 485.0
scale = Vector2(-2.44724, 4.52648)
theme = SubResource("Theme_kvfhf")
color = Color(0.427493, 0.427493, 0.427493, 1)

[node name="AnswerBox" type="LineEdit" parent="."]
visible = false
z_index = 999
offset_left = 318.0
offset_top = 509.0
offset_right = 959.0
offset_bottom = 616.0
theme_override_fonts/font = ExtResource("1_t8wh6")
theme_override_font_sizes/font_size = 20
placeholder_text = "Your answer is:"
secret_character = "*"

[node name="Button" type="Button" parent="."]
visible = false
z_index = 999
offset_left = 992.0
offset_top = 466.0
offset_right = 1108.0
offset_bottom = 582.0
icon = ExtResource("3_d4cqq")
flat = true
expand_icon = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
